--- a/index.html
+++ b/index.html
@@ -162,12 +162,91 @@
             border-left: 4px solid var(--accent-gold);
             border-radius: 6px;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            cursor: pointer;
         }
 
         .menu-item:hover {
             background: linear-gradient(to right, rgba(212, 165, 116, 0.12), transparent);
             transform: translateX(6px);
             box-shadow: 0 4px 12px rgba(61, 40, 23, 0.08);
+        }
+
+        /* MODAL STYLES */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            animation: fadeIn 0.3s ease;
+        }
+
+        .modal.show {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .modal-content {
+            background: var(--secondary-bg);
+            padding: 30px;
+            border-radius: 16px;
+            max-width: 500px;
+            width: 90%;
+            box-shadow: 0 10px 40px rgba(61, 40, 23, 0.25);
+            max-height: 90vh;
+            overflow-y: auto;
+        }
+
+        .modal-image {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+
+        .modal-title {
+            font-size: 28px;
+            font-family: 'Playfair Display', serif;
+            color: var(--text-dark);
+            margin-bottom: 15px;
+            font-weight: 800;
+        }
+
+        .modal-description {
+            font-size: 14px;
+            color: var(--text-secondary);
+            line-height: 1.8;
+            margin-bottom: 20px;
+        }
+
+        .modal-price {
+            font-size: 24px;
+            color: var(--accent-orange);
+            font-weight: 700;
+            margin-bottom: 25px;
+            font-family: 'Playfair Display', serif;
+        }
+
+        .modal-close {
+            background: var(--accent-gold);
+            color: white;
+            border: none;
+            padding: 12px 30px;
+            border-radius: 6px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+        }
+
+        .modal-close:hover {
+            background: var(--accent-orange);
         }
 
         .item-name {
@@ -446,6 +525,25 @@
             background: var(--accent-orange);
         }
 
+        .modal-close-btn {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            font-size: 28px;
+            font-weight: bold;
+            color: var(--accent-orange);
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .modal-close-btn:hover {
+            color: var(--text-dark);
+        }
+
+        .modal-content {
+            position: relative;
+        }
+
     </style>
 </head>
 <body>
@@ -472,25 +570,25 @@
             <div class="category">
                 <div class="category-title">EGGS</div>
 
-                <div class="menu-item">
+                <div class="menu-item" onclick="openModal('omelette')">
                     <div class="item-name">OMELETTE</div>
                     <div class="item-description">3 eggs omelette with hash brown, grilled tomato, fresh salad & side of bread</div>
                     <div class="item-price">PKR 1,275</div>
                 </div>
 
-                <div class="menu-item">
+                <div class="menu-item" onclick="openModal('paskitori')">
                     <div class="item-name">PASKITORI</div>
                     <div class="item-description">Mediterranean pasta omelette with fresh herbs and premium cheese blend</div>
                     <div class="item-price">PKR 1,725</div>
                 </div>
 
-                <div class="menu-item">
+                <div class="menu-item" onclick="openModal('pepperoni')">
                     <div class="item-name">PEPPERONI & CHEESE</div>
                     <div class="item-description">Spiced pepperoni with creamy melted cheese in a fluffy omelette</div>
                     <div class="item-price">PKR 1,645</div>
                 </div>
 
-                <div class="menu-item">
+                <div class="menu-item" onclick="openModal('mushroom')">
                     <div class="item-name">MUSHROOMS & CHEESE</div>
                     <div class="item-description">Sautéed mushrooms with house three-cheese blend</div>
                     <div class="item-price">PKR 1,445</div>
@@ -620,6 +718,17 @@
 
         </div>
 
+        <!-- MODAL POPUP -->
+        <div id="dishModal" class="modal" onclick="if(event.target.id === 'dishModal') closeModal()">
+            <div class="modal-content">
+                <span class="modal-close-btn" onclick="closeModal()">✕</span>
+                <img id="modalImage" class="modal-image" src="" alt="Dish Image">
+                <h2 id="modalTitle" class="modal-title"></h2>
+                <p id="modalDescription" class="modal-description"></p>
+                <p id="modalPrice" class="modal-price"></p>
+            </div>
+        </div>
+
         <!-- FOOTER -->
         <div class="footer">
             <div class="contact-info">
@@ -637,5 +746,58 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const dishData = {
+            omelette: {
+                title: 'OMELETTE',
+                description: '3 eggs omelette with hash brown, grilled tomato, fresh salad & side of bread',
+                price: 'PKR 1,275',
+                image: 'https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/c0ac1ad6-352c-4516-addf-e6e0f971e372'
+            },
+            paskitori: {
+                title: 'PASKITORI',
+                description: 'Mediterranean pasta omelette with fresh herbs and premium cheese blend',
+                price: 'PKR 1,725',
+                image: 'https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/5c7f238f-bb95-4399-802d-fa66f818ff89'
+            },
+            pepperoni: {
+                title: 'PEPPERONI & CHEESE',
+                description: 'Spiced pepperoni with creamy melted cheese in a fluffy omelette',
+                price: 'PKR 1,645',
+                image: 'https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/c72e9e92-742e-43b6-9eb8-652a1d1159e5'
+            },
+            mushroom: {
+                title: 'MUSHROOMS & CHEESE',
+                description: 'Sautéed mushrooms with house three-cheese blend',
+                price: 'PKR 1,445',
+                image: 'https://agi-prod-file-upload-public-main-use1.s3.amazonaws.com/a166522c-8d15-4e02-90b4-8463205389fa'
+            }
+        };
+
+        function openModal(dishKey) {
+            const dish = dishData[dishKey];
+            if (!dish) return;
+
+            document.getElementById('modalImage').src = dish.image;
+            document.getElementById('modalTitle').textContent = dish.title;
+            document.getElementById('modalDescription').textContent = dish.description;
+            document.getElementById('modalPrice').textContent = dish.price;
+            document.getElementById('dishModal').classList.add('show');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeModal() {
+            document.getElementById('dishModal').classList.remove('show');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal with Escape key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeModal();
+            }
+        });
+    </script>
 </body>
 </html>
